# mcp-nano-banana

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
mcp_nano_banana/: __init__.py  __main__.py  config.py  gemini_client.py  schemas.py  server.py  service.py  storage.py  tools.py
tests/: support.py  test_config.py  test_entrypoints.py  test_readme.py  test_release_hygiene.py  test_service.py  test_storage.py  test_tools.py
